--- a/templates/edit_form.html
+++ b/templates/edit_form.html
@@ -21,7 +21,7 @@
         </div>
         <div class="card-body">
             <form method="POST" action="{{ url_for('edit_form', form_id=form.id) }}">
-                {# If using WTForms later, add hidden_tag() #}
+                <input type="hidden" name="csrf_token" value="{{ csrf_token() }}">
                 <div class="row g-3">
                     <div class="col-md-4">
                         <label for="field_label" class="form-label">Field Label <span class="text-danger">*</span></label>
