--- a/templates/edit_field.html
+++ b/templates/edit_field.html
@@ -8,7 +8,7 @@
     <hr>
 
     <form method="POST" action="{{ url_for('edit_field', field_id=field.id) }}">
-        {# If using Flask-WTF later, add hidden_tag() #}
+        <input type="hidden" name="csrf_token" value="{{ csrf_token() }}">
         <div class="row g-3 mb-3">
             <div class="col-md-4">
                 <label for="field_label" class="form-label">Field Label <span class="text-danger">*</span></label>
