--- a/templates/home.html
+++ b/templates/home.html
@@ -9,7 +9,7 @@
 
       {# Left Column: Visual #}
       <div class="col-md-6 col-lg-5 mb-4 mb-md-0 hero-visual-column"> {# Adjust column size breakdown if needed #}
-        <img src="{{ url_for('static', filename='images/your-actual-image-name.ext') }}" {# <<< UPDATE FILENAME! #}
+        <img src="{{ url_for('static', filename='images/img.png') }}" {# <<< UPDATE FILENAME! #}
              alt="Hero image" {# <<< UPDATE ALT TEXT! #}
              class="img-fluid rounded shadow-lg">
          {# Make sure you have uploaded your image to static/images/ #}
